--- a/package.json
+++ b/package.json
@@ -1,5 +1,28 @@
 {
-  "name": "rails-yelp-mvp",
+  "name": "rails-velp-mvp",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@rails/actioncable": "^7.1.3-4",
+    "@rails/activestorage": "^7.1.3-4",
+    "@rails/ujs": "^7.1.3-4",
+    "@rails/webpacker": "5.4.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.1.1",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3",
+    "compression-webpack-plugin": "^6.1.1"
+  },
+  "engines": {
+    "node": "20.x"
+  }
 }
